Use server-provided job images and fix title alignment
- Update JobOne and JobMosaicTile to use server-provided image URLs
- Add min-height to job titles for consistent alignment across single/multi-line titles
- Various job display improvements

--- a/assets/css/_color-vars.scss
+++ b/assets/css/_color-vars.scss
@@ -100,6 +100,10 @@ $color-gray-opacity-70: rgba(128, 128, 128, 0.7);
 $color-purple: purple;
 $color-gold: darkgoldenrod;
 
+// Job ad icon backgrounds
+$color-job-icon-dark: #2d5016;
+$color-job-icon-soft: #7a9a6d;
+
 // Social networks
 $color-facebook: #3b5998;
 $color-twitter: #00aced;
